force-app/main/default/objects/Insurance_Detail__c/Insurance_Detail__c.object-meta.xml
<CustomObject>
    <label>Insurance Detail</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Insurance Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>