force-app/main/default/objects/Insurance_Detail__c/fields/Insured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insured_Amount__c</fullName>
    <label>Insured Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>