force-app/main/default/objects/Insurance_Detail__c/fields/Insuring_Company__c.field-meta.xml
<CustomField>
    <fullName>Insuring_Company__c</fullName>
    <label>Insuring Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>