force-app/main/default/objects/Insurance_Detail__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Details</relationshipLabel>
    <relationshipName>Insurance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>